--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -59,22 +59,127 @@
         </div>
         <!-- app container -->
         <div class="content-container">
-         <div class="row mt-10">
-            <div class="col-lg-12 col-md-12 text-center">
-                <h1>The Platform for Entrepreneur to Collaborate and Do Business</h1>
+            <div class="row mt-10">
+                <div class="col-lg-12 col-md-12 text-center">
+                    <h1>The Platform for Entrepreneur to Collaborate and Do Business</h1>
+                </div>
             </div>
-        </div>
-        <div class="row mt-10">
-            <div class="col-lg-12 col-md-12 col-sm-12">
-                <ul class="search-tab">
-                    <li ng-click="setactivetab('all')"><a ng-class="{'active':activetab=='all'}">All</a></li>
-                    <li ng-click="setactivetab('service')"><a ng-class="{'active':activetab=='service'}">Services</a></li>
-                    <li ng-click="setactivetab('shop')"><a ng-class="{'active':activetab=='shop'}">Products</a></li>
-                    <li ng-click="setactivetab('rental')"><a ng-class="{'active':activetab=='rental'}">Rentals</a></li>
-                    <li ng-click="setactivetab('event')"><a ng-class="{'active':activetab=='event'}">Events</a></li>
-                </ul>
+            <div class="row mt-10">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <ul class="search-tab">
+                        <li ng-click="setactivetab('all')"><a ng-class="{'active':activetab=='all'}">All</a></li>
+                        <li ng-click="setactivetab('service')"><a ng-class="{'active':activetab=='service'}">Services</a></li>
+                        <li ng-click="setactivetab('shop')"><a ng-class="{'active':activetab=='shop'}">Products</a></li>
+                        <li ng-click="setactivetab('rental')"><a ng-class="{'active':activetab=='rental'}">Rentals</a></li>
+                        <li ng-click="setactivetab('event')"><a ng-class="{'active':activetab=='event'}">Events</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+
+            <div class="row mt-30">
+                <div class="col-lg-9 col-md-9 col-xs-12 col-sm-4">
+                    <div class="row">
+                        <slick ng-if="!formLoading" init-onload="true" data="products.service" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
+                            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.service">
+                                <div class="card" ng-click="showItem(data)">
+                                    <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <div class="card-info">
+                                            <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
+                                            <span class="price-sub">Per {{data.periodtype}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a><i class="fa fa-heart"></i></a>
+                                        <a><i class="fa fa-share"></i></a>
+                                        <a><i class="fa fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </slick>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-30">
+                <div class="col-lg-9 col-md-9 col-xs-12 col-sm-4">
+                    <div class="row">
+                        <slick ng-if="!formLoading" init-onload="true" data="products.shop" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
+                            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.shop">
+                                <div class="card" ng-click="showItem(data)">
+                                    <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <div class="card-info">
+                                            <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
+                                            <span class="price-sub">Per {{data.periodtype}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a><i class="fa fa-heart"></i></a>
+                                        <a><i class="fa fa-share"></i></a>
+                                        <a><i class="fa fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </slick>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-30">
+                <div class="col-lg-9 col-md-9 col-xs-12 col-sm-4">
+                    <div class="row">
+                        <slick ng-if="!formLoading" init-onload="true" data="products.rental" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
+                            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.rental">
+                                <div class="card" ng-click="showItem(data)">
+                                    <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <div class="card-info">
+                                            <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
+                                            <span class="price-sub">Per {{data.periodtype}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a><i class="fa fa-heart"></i></a>
+                                        <a><i class="fa fa-share"></i></a>
+                                        <a><i class="fa fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </slick>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-30">
+                <div class="col-lg-9 col-md-9 col-xs-12 col-sm-4">
+                    <div class="row">
+                        <slick ng-if="!formLoading" init-onload="true" data="products.event" settings="slickConfig" slides-to-scroll="1" dots="false" infinite="false">
+                            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in products.event">
+                                <div class="card" ng-click="showItem(data)">
+                                    <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
+                                    </div>
+                                    <div class="card-content">
+                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <div class="card-info">
+                                            <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
+                                            <span class="price-sub">Per {{data.periodtype}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a><i class="fa fa-heart"></i></a>
+                                        <a><i class="fa fa-share"></i></a>
+                                        <a><i class="fa fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </slick>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
