--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -279,7 +279,9 @@
                             </div>
                         </div>
                         <div class="row">
-                            <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
+                            <div class="col-lg-12 col-md-12 text-center">
+                                <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
+                            </div>
                         </div>
                     </div>
                 </div>
