--- a/angular/tpl/desktop/feeds.html
+++ b/angular/tpl/desktop/feeds.html
@@ -1,95 +1,97 @@
-<div ng-controller="FeedCtrl" class="feedpage">
-    <div class="wthree-dot" id="notificationtop" ng-if="!formLoading">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 col-sm-2 col-lg-2 nopadding leftSidebar" data-ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-                <div class="col-md-10 col-sm-10 col-lg-10 nopadding min800">
-                    <div class="col-md-12 col-sm-12 col-lg-12 mypadding">
-                        <div class="wishlistheader ">
-                            <div class="col-sm-12 col-md-12 col-lg-12">
-                                <span class="wishlisttitle float-lt"><i class="fa fa-tasks" aria-hidden="true"></i>  &nbsp;LIST OF FEEDS</span>
-                                <div class="clear"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-12 mypadding">
-                        <div class="cate-name" ng-if="!formLoading">
-                            <a role="button" class="pull-left">{{activetab == 'myfeed' ? 'My Feeds':'Wished Feeds'}}</a>
-                            <a data-toggle="dropdown" role="button" class=" noti_btn_b float-rt">Filter By</a>
-                            <ul class="dropdown-menu">
-                                <li><a ng-click="setactivetab('myfeed')">My Feeds</a></li>
-                                <li><a ng-click="setactivetab('wishedfeed')">Wished Feeds</a></li>
-                            </ul>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                    <div class="col-md-12 col-sm-12 col-lg-12 notificationnew mypadding" ng-if="activetab == 'myfeed'">
-                        <div class="notificationlist text-center" ng-if="myfeeds.data.length == 0">
-                            There is no wished feeds.
-                        </div>
-                        <div class="col-md-12 col-sm-12 col-lg-12  boot_list" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total">
-                            <div class="col-md-6 col-sm-4 col-lg-5 nopadding">
-                                <div class="boot_img" background-image="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}" alt="">&nbsp;</div>
-                                <div class="col-md-8 col-sm-7 col-lg-8 no-padding-left">
-                                    <a class="boot_user_link cursor" ui-sref="app.viewfeed({'id':data.id})">{{data.title}}</a>
-                                    <span class="user-subhead">{{convertDate(data.updated_at) | dateToISO | date:'dd MMM yyyy'}}</span>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-4 col-lg-5 no-padding">
-                                <div class="detailsdescription col-xs-12">{{data.description | cut:true:120:'..'}}</div>
-                            </div>
-                            <div class="col-md-2 col-sm-2 col-lg-2 flex-align nopadding text-center">
-                                <div class="col-md-12 col-sm-12 col-lg-12 nopadding">
-                                    <div class="product-button">
-                                        <a class="" title="" ng-click=""><i class="fa fa-"></i></a>
-                                        <a class="btn-add-comparre" title="Share to Earn" ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
-                                        <a class="btn-add-comparre" ng-click="removefeed(key,data.id)"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pull-right pagination-ctrl"></dir-pagination-controls>
-                    </div>
-                    <div class="col-md-12 col-sm-12 col-lg-12 notificationnew mypadding" ng-if="activetab == 'wishedfeed'">
-                        <div class="notificationlist text-center" ng-if="wishedfeeds.data.length == 0">
-                            There is no wished feeds.
-                        </div>
-                        <div class="col-md-12 col-sm-12 col-lg-12  boot_list" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total">
-                            <div class="col-md-6 col-sm-4 col-lg-5  nopadding">
-                                <div class="boot_img" background-image="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}" alt="">&nbsp;</div>
-                                <div class="col-md-8 col-sm-7 col-lg-9 no-padding-left">
-                                    <a class="boot_user_link cursor" ui-sref="app.viewfeed({'id':data.id})">{{data.title}}</a>
-                                    <span class="user-subhead">{{data.owner.username}}</span>
-                                    <span class="user-subhead font_b"> | </span>
-                                    <span class="user-subhead">
-                              <!-- Last Update: --> {{convertDate(data.updated_at) | dateToISO | date:'dd MMM yyyy'}}
-                           </span>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-4 col-lg-5 no-padding">
-                                <div class="detailsdescription col-xs-12">{{data.description | cut:true:120:'..'}}</div>
-                            </div>
-                            <div class="col-md-2 col-sm-2 col-lg-2 flex-align nopadding text-center">
-                                <div class="col-md-12 col-sm-12 col-lg-12 nopadding">
-                                    <div class="product-button">
-                                        <a class="btn-add-wishlist" title="Add to Wishlist" ng-click="updatefeedwish(data)"><i class="fa fa-heart wished"></i></a>
-                                        <a class="btn-add-comparre" title="Share to Earn" ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
-                                        <a class="btn-add-comparre" title="Message to" ng-click="gotofeedchat(data.id)"><img class="ico-chat" src="img/promes.png"></a>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pull-right pagination-ctrl"></dir-pagination-controls>
+<div ng-controller="FeedCtrl" class="content-wrapper">
+<div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+<div class="center-content">
+    <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="topbar">
+                    <div class="topbar-left">
+                        <h2><i class="fa fa-tasks" aria-hidden="true"></i> &nbsp;LIST OF FEEDS</h2>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-2 col-lg-2 nopadding rightSidebar" data-ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
             </div>
         </div>
-    </div>
+        <div class="row mt-10">
+            <div class="col-lg-12 col-md-12">
+                <div class="topbar result">
+                    <div class="topbar-left">
+                        <span class="lefttext">{{activetab == 'myfeed' ? 'My Feeds':'Wished Feeds'}}</span>
+                    </div>
+                    <div class="topbar-right">
+                        <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">| Filter by <i class="fa fa-angle-down ml-10"></i></span>
+                        <ul class="dropdown-menu">
+                            <li><a ng-click="setactivetab('myfeed')">My Feeds</a></li>
+                            <li><a ng-click="setactivetab('wishedfeed')">Wished Feeds</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-10" ng-if="activetab == 'myfeed'">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total">
+               <div class="table-card">
+                    <div class="flex-top-space" ui-sref="app.viewfeed({id:data.id})">
+                        <div class="table-img">
+                            <img ng-src="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}" />
+                        </div>
+                        <div class="table-content">
+                            <div class="table-col">
+                                <h5 ui-sref="app.viewfeed({id:data.id})">{{data.title}}</h5>
+                                <span>{{data.owner.username}}  |  Last Update: {{convertDate(data.updated_at) | dateToISO | date:'dd MMM yyyy'}}</span>
+                            </div>
+                            <div class="table-col">
+                                <h5>{{data.totalcost | currency}} SGD</h5>
+                                <span>Budget / Salary</span>
+                            </div>
+                            <div class="table-col">
+                                <h5>Early {{data.deadline | dateToISO | date:'MMM yyyy'}}</h5>
+                                <span class="danger">{{data.remainingdays}} Days Remaining</span>
+                            </div>
+                        </div>
+                        <div class="table-option">
+                           
+                            <a ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
+                            <a ng-click="removefeed(key,data.id)"><i class="fa fa-minus-circle"></i></a></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pull-right pagination-ctrl" pagination-id="friends"></dir-pagination-controls>
+            </div>
+        </div>
+        <div class="row mt-10" ng-if="activetab == 'wishedfeed'">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total">
+               <div class="table-card">
+                 <div class="flex-top-space">
+                        <div class="table-img" ui-sref="app.viewfeed({id:data.id})">
+                            <img ng-src="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}" />
+                        </div>
+                        <div class="table-content">
+                            <div class="table-col">
+                                <h5>{{data.title}}</h5>
+                                <span>{{data.owner.username}}  |  Last Update: {{convertDate(data.updated_at) | dateToISO | date:'dd MMM yyyy'}}</span>
+                            </div>
+                        </div>
+                        <div class="table-option">
+                            <a title="Add to Wishlist" ng-click="updatefeedwish(data)"><i class="fa fa-heart primary"></i></a>
+                            <a ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
+                            <a ui-sref="app.projectdetails({id:data.id})"><img src="../assets/img/message-icon.png" /></a>
+                        </div>
+                    </div>
+                    <div class="full-col mt-10">{{data.description | cut:true:120:'..'}}</div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pull-right pagination-ctrl" pagination-id="friends"></dir-pagination-controls>
+            </div>
+        </div>
 </div>
+<div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+</div>
+
+
+<style type="text/css">
+   .table-img img{
+      width: 100px;
+   }
+</style>
