--- a/angular/tpl/desktop/friends.html
+++ b/angular/tpl/desktop/friends.html
@@ -72,9 +72,11 @@
                         <a class="btn default-btn" ng-click="gotoprivatechat(friend.id)"><i class="fa fa-phone-square"></i> Chat</a>
                     </div>
                 </div>
-            </div>
+            </div>            
+        </div>
+        <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pull-right pagination-ctrl" pagination-id="friends"></dir-pagination-controls>
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pagination-ctrl" pagination-id="friends"></dir-pagination-controls>
             </div>
         </div>
         <div class="row">
@@ -131,6 +133,9 @@
                     </div>
                 </div>
             </div>
+            
+        </div>
+        <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'otherpeoples')" class="pull-right pagination-ctrl" pagination-id="peoples"></dir-pagination-controls>
             </div>
@@ -138,8 +143,3 @@
    </div>
    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
-<style type="text/css">
-   .rank-icon{
-      height: 36px;
-   }
-</style>
