design changes committed

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -61,7 +61,7 @@
 
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 flex-center-space">
-                        <a class="logo" ui-sref="app.home">
+                        <a class="logo" ui-sref="app.usermain">
                             <img ng-src="{{IMGURL}}{{settings.footerlogo}}" />
                         </a>
                         <div class="search-top">
