--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -6,7 +6,11 @@
             <img class="rank-icon" ng-src="{{IMGURL}}{{user.xprank.icon}}" height="20px">
         </div>
         <div class="right-content">
-            <canvas id="doughnut" class="chart chart-doughnut" chart-options="ChartOptions" chart-data="chartdata" chart-colors="Colors" chart-labels="labels" width="100%" height="100%"> </canvas>
+            <div class="chart-holder">
+                <div class="stats">STATS</div>
+                <div class="xp">XP</div>
+                <canvas id="doughnut" class="chart chart-doughnut" chart-options="ChartOptions" chart-data="chartdata" chart-colors="Colors" chart-labels="labels" width="100%" height="100%"> </canvas>
+            </div>
         </div>
     </div>
 
@@ -117,7 +121,11 @@
             <img class="rank-icon" ng-src="{{IMGURL}}{{user.xprank.icon}}" height="20px">
         </div>
         <div class="right-content">
-            <canvas id="doughnut" class="chart chart-doughnut" chart-options="ChartOptions" chart-data="chartdata" chart-colors="Colors" chart-labels="labels" width="100%" height="100%"> </canvas>
+            <div class="chart-holder">
+                <div class="stats">STATS</div>
+                <div class="xp">XP</div>
+                <canvas id="doughnut" class="chart chart-doughnut" chart-options="ChartOptions" chart-data="chartdata" chart-colors="Colors" chart-labels="labels" width="100%" height="100%"> </canvas>
+            </div>
         </div>
     </div>
 
