--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -48,7 +48,7 @@
     </nav>
 </header>
 
-<header class="main-header hidden-print" ng-if="stateurl != 'app.home' && stateurl != 'app.searchitems'">
+<header class="main-header hidden-print" ng-if="stateurl != 'app.home' && stateurl != 'app.searchitems'"  ng-class="{'iscookie':showheader}">
         <nav class="navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
