--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-10">
+        <div class="row mt-15">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-10">
+        <div class="row mt-15">
             <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" dir-paginate="(key,data) in wishedproducts.data | itemsPerPage: totalPerPage" total-items="wishedproducts.total" current-page="pagination.current">
                 <div class="card">
                     <div class="card-img" background-image="{{data.product.images[0].filetype == 1 ? IMGURL:''}}{{data.product.images[0].thumbnail}}">
@@ -62,7 +62,7 @@
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-15">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-10">
+        <div class="row mt-15">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" ng-repeat="(key,data) in comparedproducts">
                 <div class="card compare-card">
                     <div class="card-close">
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <div class="footer-bottom">
-                            <p>{{data.product.description | cut:true:250:'...'}}</p>
+                            {{data.product.description | cut:true:250:'...'}}
                         </div>
                     </div>
                 </div>
