--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -80,7 +80,7 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mb-10">
+                        <div class="topbar result mt-15 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">SERVICES</span>
                             </div>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mb-10">
+                        <div class="topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">PRODUCTS</span>
                             </div>
@@ -160,7 +160,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mb-10">
+                        <div class="topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">RENTAL</span>
                             </div>
@@ -201,7 +201,7 @@
                 <div class="row">
 
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mb-10">
+                        <div class="topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">EVENT</span>
                             </div>
@@ -244,7 +244,7 @@
             <div ng-if="activetab != 'all'">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mb-10">
+                        <div class="topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext text-uppercase">{{activetab == 'shop' ? 'products':activetab + 's'}}</span>
                             </div>
