--- a/angular/index.html
+++ b/angular/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <!-- <base href="/project/Collabro/angular/"> -->
-    <base href="/collabro-v1/collabro-website/angular/" />
+    <base href="/project/Collabro/angular/">
+    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -104,6 +104,10 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-touch.js"
       type="text/javascript"
     ></script>
+
+    <script src="libs/chart/chart.min.js"></script>
+    <script src="libs/chart/angular-chart.min.js"></script>
+    <script src="libs/chart/chartjs-plugin-labels.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.js"></script>
     <script src="libs/angular/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="libs/angular/angular-ui-router/release/angular-ui-router.js"></script>
