friends and wishlist changes added

--- a/angular/tpl/desktop/friends.html
+++ b/angular/tpl/desktop/friends.html
@@ -54,6 +54,7 @@
                         <div class="card-right">
                             <ul class="card-thumbs">
                                 <li ng-repeat="(no,product) in friend.ownerproducts| limitTo: 4"><img ng-src="{{product.images[0].filetype == 1 ? IMGURL:''}}{{product.images[0].thumbnail}}" /></li>
+                                <li ng-repeat="i in dummyarray | limitTo: (dummyarray.length - friend.ownerproducts.length)" ng-if="friend.ownerproducts.length < 4"><img ng-src="../assets/img/not-avail.png" /></li>
                             </ul>
                             <div class="rewards">
                                 <div class="rewards-left">
@@ -121,6 +122,7 @@
                         <div class="card-right">
                             <ul class="card-thumbs">
                                 <li ng-repeat="(no,product) in people.ownerproducts| limitTo: 4"><img ng-src="{{product.images[0].filetype == 1 ? IMGURL:''}}{{product.images[0].thumbnail}}"/></li>
+                                <li ng-repeat="i in dummyarray | limitTo: (dummyarray.length - people.ownerproducts.length)" ng-if="people.ownerproducts.length < 4"><img ng-src="../assets/img/not-avail.png" /></li>
                             </ul>
                         </div>
                     </div>
